[package]
name = "range_proof"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

ark-ff = { version = "0.5", features = ["rayon", "parallel", "std"] }
ark-ec = { version = "0.5", features = ["rayon", "parallel", "std"] }
ark-std = { version = "0.5", features = ["rayon", "parallel", "std"] }
ark-poly = { version = "0.5", features = ["rayon", "parallel", "std"] }
ark-poly-commit = { version = "0.5", features = ["parallel"] }  # Removed "kzg10" feature
ark-serialize = { version = "0.5", features = ["derive", "rayon", "parallel", "std"] }
ark-bls12-381 = "0.5"

rayon = "1.10"
sha2 = "0.10.8"
anyhow = "1.0.89"

num-bigint = "0.4.6"
num-traits = "0.2.19"
bigdecimal = { version = "0.4.6", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4"] }
chrono = "0.4.38"

criterion = { version = "0.5.1", features = ["html_reports", "plotters", "async_tokio"] }

sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "macros", "any", "postgres", "uuid", "chrono", "bigdecimal", "mysql", "sqlite"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0"
include_dir = "0.7.4"

num_cpus = "1.16.0"
bincode = "1.3.3"
hex = "0.4.3"

utoipa = { version = "5" }

[dev-dependencies]
tokio = { version = "1.41.0", features = ["full"] }
rs_merkle = "1.5.0"