[package]
name = "range_proof"
version = "0.2.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

ark-bls12-381 = "0.5"
ark-ec = { version = "0.5", features = ["rayon", "parallel", "std"] }
ark-ff = { version = "0.5", features = ["rayon", "parallel", "std"] }
ark-poly = { version = "0.5", features = ["rayon", "parallel", "std"] }
ark-poly-commit = { version = "0.5", features = ["parallel"] }  # Removed "kzg10" feature
ark-serialize = { version = "0.5", features = ["derive", "rayon", "parallel", "std"] }
ark-std = { version = "0.5", features = ["rayon", "parallel", "std"] }

num-traits = "0.2.19"

rayon = "1.10"
sha2 = "0.10.8"
anyhow = "1.0.89"

serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"

[dev-dependencies]
ark-bn254 = "0.5.0"
criterion = { version = "0.8.2", features = ["html_reports", "plotters", "async_tokio"] }
